--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <!-- Calculator Math.html -->
 <html>
 <head>
-    <title>KATIK</title>
+    <!-- meta tag -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <!-- Judul Web -->
+    <title>KATIK</title>
 </head>
 <body>
     <!-- Kotak utama -->
